# spelling-bee-qt

./: CMakeLists.txt  README.md  resources.qrc
src/: CMakeLists.txt  main.cpp
src/lib/: trie.cpp  trie.h  utils.cpp  utils.h  wordvalidator.cpp  wordvalidator.h
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/: CMakeLists.txt  testtrie.cpp  testtrie.h  testwordvalidator.cpp  testwordvalidator.h
